[gd_scene load_steps=16 format=3 uid="uid://b563ksapfq2qu"]

[ext_resource type="Script" path="res://scripts/bat.gd" id="1_qdvlp"]
[ext_resource type="Texture2D" uid="uid://cdpc4vguxw0ql" path="res://assets/Mob/Small Bee/Hit/Hit-Sheet.png" id="2_lxxdg"]
[ext_resource type="Texture2D" uid="uid://b3djivbo0dhmj" path="res://assets/Mob/Small Bee/Fly/Fly-Sheet.png" id="2_obdbi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_srwuh"]
atlas = ExtResource("2_lxxdg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo5kf"]
atlas = ExtResource("2_lxxdg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwrxw"]
atlas = ExtResource("2_lxxdg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtg66"]
atlas = ExtResource("2_lxxdg")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8ghk"]
atlas = ExtResource("2_obdbi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlfv1"]
atlas = ExtResource("2_obdbi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe5kl"]
atlas = ExtResource("2_obdbi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w1h5"]
atlas = ExtResource("2_obdbi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1w7ir"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_srwuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo5kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwrxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtg66")
}],
"loop": false,
"name": &"dead",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8ghk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlfv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe5kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w1h5")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0mjj7"]
radius = 134.634

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j5lfv"]
radius = 7.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x53hu"]
radius = 7.0
height = 24.0

[node name="Bat" type="CharacterBody2D"]
position = Vector2(0, -5)
collision_layer = 16
script = ExtResource("1_qdvlp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1w7ir")
animation = &"dead"
frame = 3
frame_progress = 1.0

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(1, -0.5)
shape = SubResource("CircleShape2D_0mjj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_j5lfv")
debug_color = Color(0.643137, 0.388235, 0.894118, 0.419608)

[node name="BulletDetection" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetection"]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_x53hu")
debug_color = Color(0.631373, 0.517647, 0.345098, 0.419608)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="BulletDetection" to="." method="_on_bullet_detection_body_entered"]
